syntax = "proto3";

package user;

service UserService {
  rpc GetUserById(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string username = 3;         // can be null
  string phoneNumber = 4;
  string email = 5;
  string profile_pic = 6;      // default empty string if null
  string lastSeen = 7;         // timestamp as string
  bool success = 8;            // true if user found
}
